--- a/pcc-calculation.html
+++ b/pcc-calculation.html
@@ -35,7 +35,7 @@
       .logo{margin-top:10px;color:#ddd;text-decoration:none;font-size:25px;font-weight:700}
       .logo a{color:#ddd!important;text-decoration:none!important}
       .Menu{width:100%;border-bottom:1px solid #ccc;height:100%;padding-bottom:15px;margin-bottom:20px;font-weight:700}
-      #wrap{max-width:750px;margin:0 auto;padding:10px}
+      #wrap{max-width:850px;margin:0 auto;padding:0 5px 0 5px}
       .header{height:auto;width:100%;margin-top:5px;margin-bottom:12px;border-top:1px solid #555}
       .main-wrap{background-color:#f60}
       .content{float:right;width:70%;height:450px;padding:10px;border-top:1px solid #bbb;border-bottom:1px solid #bbb;border-right:1px solid #bbb;background:#ddd;border-radius:0 5px 5px 0}
@@ -71,7 +71,7 @@
       table{border-collapse:collapse;width:100%;font-size:14px}
       td,th{border:1px solid #ddd;text-align:left;padding:8px}
 	  button{margin-bottom:5px;}
-      @media screen and (max-width:768px) {
+      @media screen and (max-width:700px) {
       .sidebar,.content{border-radius:5px;display:block;width:100%}
       .sidebar{height:200px;margin-bottom:5px}
       .header h1{max-width:100%;justify-content:center}
@@ -79,20 +79,17 @@
       .logo-left a{margin-top:10px!important;font-size:23px}
       .logo-left img{height:40px;width:50px;margin-top:-5px!important}
       h1{font-size:21px;text-align:center}
-      .mymenu{width:98%!important}
+      .mymenu{width:100%!important}
       .logo{width:100%}
       .logo-left{justify-content:center;display:flex;width:100%}
       .logo-right{justify-content:center;width:100%;display:flex}
       .footer{font-size:13px}
-      #input-kota{width:100%!important}
-      .reg-area{margin:0!important}
       }
       @media screen and (max-width:600px) {
       h1{font-size:19px}
       .logo-left a{margin-top:10px!important;font-size:20px}
       .logo-left img{height:auto;width:40px;margin-top:-5px!important}
       .sidebar{padding:10px}
-      #wrap{padding:5px}
       .mikrotik-logo{display:flex;justify-content:center;margin-top:15px}
       .show-homepage-menu{display:flex;justify-content:center;width:100%;clear:both}
       .mymenu{padding-left:0;padding-right:0}
@@ -112,7 +109,8 @@
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-auth.js"></script>   
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v12.0&appId=379827522913428&autoLogAppEvents=1" nonce="Esvux9Cl"></script>
-    <div id="mymenu" class="mymenu">
+    <div id="wrap">
+   <div id="mymenu" class="mymenu">
       <div class="mikrotik-logo" >
         <img alt="mikrotik" src="./img/made-for-mikrotik.png">
       </div>
@@ -136,7 +134,6 @@
         </div>
       </div>
     </div>
-    <div id="wrap">
       <div class="logo">
         <div class="logo-right" style="float:right;">
           <div style="float:right">
