--- a/vpn-tunnel-all-traffic-script-generator.html
+++ b/vpn-tunnel-all-traffic-script-generator.html
@@ -36,7 +36,7 @@
       .Menu{width:100%;border-bottom:1px solid #ccc;height:100%;padding-bottom:15px;margin-bottom:20px;font-size:14px;font-weight:700}
       .logo{margin-top:15px;color:#ddd;text-decoration:none;font-size:25px;font-weight:700}
       .logo a{color:#ddd!important;text-decoration:none!important}
-      #wrap{max-width:900px;margin:0 auto;padding:5px}
+      #wrap{max-width:900px;margin:0 auto;padding:0 5px 0 5px}
       .header{height:auto;width:100%;margin-top:5px;margin-bottom:10px;border-top:1px solid #555}
       .main-wrap{display:flex}
       .content{float:right;width:66%;padding:10px;border-top:1px solid #ccc;border-bottom:1px solid #ccc;border-right:1px solid #ccc;background:#eee;height:auto;border-radius:0 5px 5px 0;font-size:14px}
@@ -48,7 +48,7 @@
       a:visited{color:#f60}
       a:hover{color:#f60}
       a:active{color:#f60}
-      button{color:#fff;background-color:#f60;border-color:#f60;border:none;padding:8px;width:110px;font-size:14px;font-weight:700;cursor:pointer;border-radius:5px;margin-bottom:5px}
+      button{color:#fff;background-color:#f60;border-color:#f60;border:none;padding:7px;width:100px;font-size:14px;font-weight:700;cursor:pointer;border-radius:5px;margin-bottom:5px}
       button:hover{background-color:#ccc;color:#111}
       .row:after{content:"";display:table;clear:both}
       input[type=checkbox]{margin-right:7px}
@@ -56,9 +56,10 @@
       label{padding:8px 5px 5px;display:inline-block}
       input[type=submit]{background-color:#f60;color:#fff;padding:13px 20px;border:none;border-radius:1px;cursor:pointer;float:right}
       input[type=submit]:hover{background-color:#45a049}
-      .list-output-content{height:345px;background:#fff;overflow:scroll;width:100%;padding:10px;margin-top:8px;border:1px solid #ccc;border-radius:5px}
+      .list-output-content{height:340px;background:#fff;overflow:scroll;width:100%;padding:10px;margin-top:8px;border:1px solid #ccc;border-radius:5px;}
       .mikrotik-logo {display:none}      
-	  @media screen and (max-width:768px) {
+	  @media screen and (max-width:700px) {
+	  .list-output-content{height:auto}	  
       .main-wrap{display:block}
       .sidebar,.content{border-radius:5px;display:block;width:100%}
       .sidebar{height:auto;margin-bottom:5px}
@@ -67,13 +68,11 @@
       .logo-left a{margin-top:10px!important;font-size:23px}
       .logo-left img{height:40px;width:50px;margin-top:-5px!important}
       h1{font-size:21px;text-align:center}
-      .mymenu{width:98%!important}
+      .mymenu{width:100%!important}
       .logo{width:100%}
       .logo-left{justify-content:center;display:flex;width:100%}
       .logo-right{justify-content:center;width:100%;display:flex}
       .footer{font-size:13px;padding-left:5px;padding-right:5px}
-      #input-kota{width:100%!important}
-      .reg-area{margin:0!important}
       }
       @media screen and (max-width:600px) {
 	  button{margin-bottom:5px;}
@@ -100,6 +99,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-auth.js"></script>   
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v12.0&appId=379827522913428&autoLogAppEvents=1" nonce="Esvux9Cl"></script>
+    <div id="wrap">
     <div id="mymenu" class="mymenu">
       <div class="mikrotik-logo" >
         <img alt="mikrotik" src="./img/made-for-mikrotik.png">
@@ -124,7 +124,6 @@
         </div>
       </div>
     </div>
-    <div id="wrap">
       <div class="logo">
         <div class="logo-right" style="float:right;">
           <div style="float:right">
