--- a/mikrotik-hide-my-router-from-isp.html
+++ b/mikrotik-hide-my-router-from-isp.html
@@ -27,178 +27,42 @@
       # Sosmed    : https://fb.me/buananet.pbun	
       ###############################################################
       --------------------------------------------------------------- */  
-      *{-webkit-transition: all .3s ease-in;-moz-transition: all .3s ease-in;-ms-transition: all .3s ease-in;transition: all .3s ease-in;}
-      body, div, span, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, textarea, p, blockquote, th, td, tr, table{margin:0; padding:0}
-      body { font-size:15px; font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; margin:0px;}
-      html, body {
-      height: 100%;
-      width:100%;
-      margin-top: 0px;
-      padding:0;
-      background: #292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat ;   
-      color:#333;
-      }
-      * {
-      box-sizing: border-box;
-      }
-      h2{
-      color:#ff6600;
-      }
-      .logo {
-      margin-top:10px;
-      color: #ddd;
-      text-decoration:none;
-      font-size:25px;
-      font-weight:bold; 
-      }	
-      .logo a{
-      color:#ddd !important;
-      text-decoration:none !important;
-      }
-      #wrap{
-      max-width:800px;
-      margin:0 auto;
-      padding:5px;
-      }
-      .header{
-      height:auto; 
-      width:100%;
-      margin-top:5px;
-      margin-bottom:10px;
-      border-top:1px solid #555;
-      }
-      .main-wrap{
-      background-color:#ff6600;
-      }     
-      .content{
-      float:right;
-      width:100%;
-      padding: 10px;
-      border-top:1px solid #bbb;
-      background:#ddd;
-      border-radius: 0 0 5px 5px;
-      }
-      .sidebar{
-      float:left;
-      width:100%;
-      padding: 20px;
-      background-color:#ddd;
-      border-bottom:0px solid #bbb; 
-      border-radius: 5px 5px 5px 5px ;  
-      }
-      .sidebar img {
-      max-width: 100%;
-      height: auto;
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      }
-      .footer{
-      font-size:13px;
-      padding-top:15px;
-      padding-bottom:15px; 
-      text-align:center;
-      clear:both;
-      width:auto;
-      color:#ddd
-      }
-      h2 {
-      color:#ff6600;;
-      }	  	  
-      h1 {
-      color:#ddd;
-      font-size:22px;
-      margin-bottom:10px;
-      margin-top:10px;
-      }
-      a:link {
-      color: #ff6600;
-      }
-      a:visited {
-      color: #ff6600;
-      }
-      a:hover {
-      color: #ff6600;
-      }
-      a:active {
-      color: #ff6600;
-      }
-      button {
-      color: #fff;
-      background-color: #ff6600;
-      border-color: #ff6600;
-      border:none;
-      padding:6px;
-      width:130px;
-      font-weight:bold;
-      font-size:14px !important;
-      cursor: pointer;
-      border-radius: 5px;
-      color: #fff;
-      margin-bottom:5px
-      }
-      button:hover {
-      background-color: #ccc;
-      color: #111;
-      }
-      .row:after {
-      content: "";
-      display: table;
-      clear: both;
-      }  
-      input[type=text], select, textarea {
-      width: 100%;
-      padding: 5px;
-      border: 1px solid #bbb;
-      border-radius: 1px;
-      resize: vertical;
-      margin-bottom:5px;
-      font-size:15px !important;
-      border-radius: 5px;
-      }
-      label {
-      padding: 5px 5px 5px 0;
-      display: inline-block;
-      }
-      input[type=submit] {
-      background-color: #ff6600;
-      color: white;
-      padding: 12px 20px;
-      border: none;
-      border-radius: 1px;
-      cursor: pointer;
-      float: right;
-      }
-      input[type=submit]:hover {
-      background-color: #45a049;
-      }
-      .column {
-      float: left;
-      width: 50%;
-      }
-      .row:after {
-      content: "";
-      display: table;
-      clear: both;
-      }
-      .list-output-content {
-      height: auto;
-      background:#fff;
-      overflow: auto;
-      overflow-x: auto;
-      width: 100%;
-      padding: 10px;
-      margin-top:10px;
-      border: 1px solid #ccc;
-      border-radius: 5px; 
-      white-space: nowrap;
-      }
-      .class-input {display:flex}
-      .mac-input input, .mac-button button {    display: inline-block;
-      -webkit-appearance: none;}
+      *{-webkit-transition:all .3s ease-in;-moz-transition:all .3s ease-in;-ms-transition:all .3s ease-in;transition:all .3s ease-in}
+      body,div,span,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,textarea,p,blockquote,th,td,tr,table{margin:0;padding:0}
+      body{font-size:15px;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";margin:0}
+      html,body{height:100%;width:100%;margin-top:0;padding:0;background:#292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat;color:#333}
+      *{box-sizing:border-box}
+      h2{color:#f60}
+      .logo{margin-top:10px;color:#ddd;text-decoration:none;font-size:25px;font-weight:700}
+      .logo a{color:#ddd!important;text-decoration:none!important}
+      #wrap{max-width:800px;margin:0 auto;padding:0 5px}
+      .header{height:auto;width:100%;margin-top:5px;margin-bottom:10px;border-top:1px solid #555}
+      .main-wrap{background-color:#f60}
+      .content{float:right;width:100%;padding:10px;border-top:1px solid #bbb;background:#ddd;border-radius:0 0 5px 5px}
+      .sidebar{float:left;width:100%;padding:20px;background-color:#ddd;border-bottom:0 solid #bbb;border-radius:5px 5px 5px 5px}
+      .sidebar img{max-width:100%;height:auto;display:block;margin-left:auto;margin-right:auto}
+      .footer{font-size:13px;padding-top:15px;padding-bottom:15px;text-align:center;clear:both;width:auto;color:#ddd}
+      h2{color:#f60}
+      h1{color:#ddd;font-size:22px;margin-bottom:10px;margin-top:10px}
+      a:link{color:#f60}
+      a:visited{color:#f60}
+      a:hover{color:#f60}
+      a:active{color:#f60}
+      button{color:#fff;background-color:#f60;border-color:#f60;border:none;padding:6px;width:130px;font-weight:700;font-size:14px!important;cursor:pointer;border-radius:5px;color:#fff;margin-bottom:5px}
+      button:hover{background-color:#ccc;color:#111}
+      .row:after{content:"";display:table;clear:both}
+      input[type=text],select,textarea{width:100%;padding:5px;border:1px solid #bbb;border-radius:1px;resize:vertical;margin-bottom:5px;font-size:15px!important;border-radius:5px}
+      label{padding:5px 5px 5px 0;display:inline-block}
+      input[type=submit]{background-color:#f60;color:#fff;padding:12px 20px;border:none;border-radius:1px;cursor:pointer;float:right}
+      input[type=submit]:hover{background-color:#45a049}
+      .column{float:left;width:50%}
+      .row:after{content:"";display:table;clear:both}
+      .list-output-content{height:auto;background:#fff;overflow:auto;overflow-x:auto;width:100%;padding:10px;margin-top:10px;border:1px solid #ccc;border-radius:5px;white-space:nowrap}
+      .class-input{display:flex}
+      .mac-input input,.mac-button button{display:inline-block;-webkit-appearance:none}
       @media screen and (max-width:768px) {
-      .header h1{max-width:100%;justify-content:center; border-top:0 !important}
-      .header {border:none}
+      .header h1{max-width:100%;justify-content:center;border-top:0!important}
+      .header{border:none}
       .logo-left a{margin-top:10px!important;font-size:23px}
       .logo-left img{height:40px;width:50px;margin-top:-5px!important}
       h1{font-size:21px;text-align:center}
@@ -207,24 +71,14 @@
       .logo-left{justify-content:center;display:flex;width:100%}
       .logo-right{justify-content:center;width:100%;display:flex}
       .footer{font-size:13px}
-      #input-kota{width:100%!important}
-      .reg-area{margin:0!important}
       }
       @media screen and (max-width:600px) {
-      .class-input {
-      float: left;
-      width: 100% !important;
-      display:block;
-      }
-      .column {
-      float: left;
-      width: 100%;
-      }
+      .class-input{float:left;width:100%!important;display:block}
+      .column{float:left;width:100%}
       h1{font-size:19px}
       .logo-left a{margin-top:10px!important;font-size:20px}
       .logo-left img{height:auto;width:40px;margin-top:-5px!important}
       .sidebar{padding:10px}
-      #wrap{padding:5px}
       .mikrotik-logo{display:flex;justify-content:center;margin-top:15px}
       .show-homepage-menu{display:flex;justify-content:center;width:100%;clear:both}
       .mymenu{padding-left:0;padding-right:0}
@@ -244,31 +98,31 @@
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-auth.js"></script>  
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v12.0&appId=379827522913428&autoLogAppEvents=1" nonce="Esvux9Cl"></script>
-    <div id="mymenu" class="mymenu">
-      <div class="mikrotik-logo" >
-        <img alt="mikrotik" src="./img/made-for-mikrotik.png">
-      </div>
-      <ul>
-        <li><a target="_blank" href="https://buananetpbun.github.io">HOME</a></li>
-        <li><a target="_blank" href="https://github.com/buananetpbun">GITHUB</a></li>
-        <li><a href="javascript:callmodal()">DONATE</a></li>
-        <li><a target="_blank" href="https://fb.me/buananet.pbun">CONTACT</a></li>
-      </ul>
-      <div class="show-homepage-menu">
-        <div id="homepage" class="hide">
-          <button style="width:90px !important; padding:6px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
-          <button id="ShowProfile" style="width:100px !important; padding:6px; margin:4px; font-weight:bold;font-size:14px;" onclick="location.href = 'https://buananetpbun.github.io/login'">My Profile</button>
-          <span class="hide-homepage">
-          <span class="avatar">
-          <img alt="avatar" id="myavatar" src="https://user-images.githubusercontent.com/42666125/199234814-c320e1fc-da95-489e-a955-43b82e3f4b46.png" >
-          </span>		
-          <span style="font-weight:normal;font-size:14px">Hi, <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
-          <span style="font-weight:normal; font-size:14px"> [<span id="email_Verified" title="E-mail verified status" style="cursor: help;"></span>]</span>
-          </span>
+    <div id="wrap">
+      <div id="mymenu" class="mymenu">
+        <div class="mikrotik-logo" >
+          <img alt="mikrotik" src="./img/made-for-mikrotik.png">
+        </div>
+        <ul>
+          <li><a target="_blank" href="https://buananetpbun.github.io">HOME</a></li>
+          <li><a target="_blank" href="https://github.com/buananetpbun">GITHUB</a></li>
+          <li><a href="javascript:callmodal()">DONATE</a></li>
+          <li><a target="_blank" href="https://fb.me/buananet.pbun">CONTACT</a></li>
+        </ul>
+        <div class="show-homepage-menu">
+          <div id="homepage" class="hide">
+            <button style="width:90px !important; padding:6px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
+            <button id="ShowProfile" style="width:100px !important; padding:6px; margin:4px; font-weight:bold;font-size:14px;" onclick="location.href = 'https://buananetpbun.github.io/login'">My Profile</button>
+            <span class="hide-homepage">
+            <span class="avatar">
+            <img alt="avatar" id="myavatar" src="https://user-images.githubusercontent.com/42666125/199234814-c320e1fc-da95-489e-a955-43b82e3f4b46.png" >
+            </span>		
+            <span style="font-weight:normal;font-size:14px">Hi, <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
+            <span style="font-weight:normal; font-size:14px"> [<span id="email_Verified" title="E-mail verified status" style="cursor: help;"></span>]</span>
+            </span>
+          </div>
         </div>
       </div>
-    </div>
-    <div id="wrap">
       <div class="logo">
         <div class="logo-right" style="float:right;">
           <div style="float:right">
