--- a/ecmp.html
+++ b/ecmp.html
@@ -158,7 +158,7 @@
             </div>
           </div>
           <div style="clear:both"></div>
-          <div style="color:#ff6600; border:1px solid #bbb; padding:7px;margin-top:0px;margin-bottom:10px">Attention! Please Change Your WAN Interface Name With Your Router Condition, Example: ether1 or E1-WAN or e1-indihome or pppoe-out1
+          <div style="color:#ff6600; border:1px solid #bbb; padding:7px;margin-top:0px;margin-bottom:10px">Please Change Your WAN Interface Name With Your Router Condition, Example: ether1 or E1-WAN or e1-indihome or pppoe-out1
           </div>
           <div style="clear:both"></div>
           <div style="display:flex">
