--- a/queue-tree-generator-shared.html
+++ b/queue-tree-generator-shared.html
@@ -16,6 +16,7 @@
     <meta property="og:url" content="https://buananetpbun.github.io/queue-tree-generator-shared.html">
     <script data-ad-client="ca-pub-9740800920365268" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>	
     <script async defer src="https://buttons.github.io/buttons.js"></script>  
+    <link rel="stylesheet" href="./login/login.css">	
     <style>
       /* --------------------------------------------
       ####################################################################
@@ -91,7 +92,6 @@
       .hide-homepage{display:none}
       }
     </style>
-    <link rel="stylesheet" href="./login/login.css">
   </head>
   <body>
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-app.js"></script>
@@ -138,7 +138,7 @@
       </div>
       <div style="clear:both"></div>
       <div class="header">
-        <h1><span style="color:#ff6600">QUEUE TREE</span> SCRIPT GENERATOR MIKROTIK + <span style="color:#ff6600">BANDWIDTH SHARED (UPTO)</span> - FOR IP SUBNET /24 ONLY</h1>
+        <h1><span style="color:#ff6600">QUEUE TREE</span> SCRIPT GENERATOR MIKROTIK + <span style="color:#ff6600">BANDWIDTH SHARED (UPTO)</span></h1>
       </div>
       <div class="main-wrap">
         <div class="sidebar">
@@ -226,7 +226,7 @@
             </div>
           </div>
           <br>
-          <button style="margin-top:-5px" id="copyscript" type="button" onclick="selectElementContents(document.getElementById('showScript'))">Copy Script</button><span style="padding:7px; font-weight:normal;margin-left:10px"><b>Copy-Paste the Script into the Terminal!</b></span>
+          <button style="margin-top:-5px" id="copyscript" type="button" onclick="selectElementContents(document.getElementById('showScript'))">Copy Script</button><span style="padding:7px; font-weight:600;margin-left:10px">Copy-Paste to Terminal.</span>
         </div>
       </div>
       <div class="footer">
